<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="120dp" >

            <ImageView
                android:id="@+id/upload_video_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/video_icon" />

            <ImageView
                android:id="@+id/upload_video_play"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/video_play" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/upload_video_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/日期" />

            <TextView
                android:id="@+id/upload_video_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/標題"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/上傳者" />

                <TextView
                    android:id="@+id/upload_video_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TextView
                android:id="@+id/upload_video_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/你在想什麼" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>